<?xml version="1.0" encoding="utf-8"?>
<!-- activity_add_review.xml -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:isIndicator="false" />

        <EditText
            android:id="@+id/editTextReviewText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Write your review here"
            android:minLines="4"
            android:gravity="top"
            android:inputType="textMultiLine"
            android:layout_marginTop="16dp" />
        <Button
            android:id="@+id/buttonAddPhoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Add Photo"
            android:layout_marginTop="16dp" />
        <ImageView
            android:id="@+id/imageViewSelectedPhoto"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:layout_marginTop="16dp"
            android:visibility="gone"/>

        <CheckBox
            android:id="@+id/swimmingCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Swimming" />

        <CheckBox
            android:id="@+id/bikingCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Biking" />

        <CheckBox
            android:id="@+id/surfingCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Surfing" />

        <CheckBox
            android:id="@+id/volleyballCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Volleyball" />

        <CheckBox
            android:id="@+id/snorkelingCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Snorkeling" />

        <Button
            android:id="@+id/buttonSubmitReview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Submit Review"
            android:layout_marginTop="24dp" />

    </LinearLayout>
</ScrollView>
